# drifter-validated-oilspill-forecasting

./: .dockerignore  .env.example  .gitignore  PANEL_QUICK_START.md  README.md  docker-compose.yml  panel.ps1  start.ps1
config/: archive_registry.yaml  case_dwh_retro_2010_72h.yaml  case_mindoro_retro_2023.yaml  case_mindoro_retro_2023_phase3b_primary_validation_amendment.yaml  data_sources.yaml  ensemble.yaml  launcher_matrix.json  launcher_matrix.schema.json  oil.yaml  panel_paper_expected_values.yaml  paper_output_registry.yaml  paper_to_output_registry.yaml  phase1_baseline_selection.yaml  phase1_mindoro_focus_pre_spill_2016_2023.yaml  phase1_regional_2016_2022.yaml  phase4_oil_scenarios.csv  recipes.yaml  settings.yaml
docker/gnome/: Dockerfile  pyproject.toml
docker/pipeline/: Dockerfile  pyproject.toml
docs/: ARCHITECTURE.md  ARCHIVE_GOVERNANCE.md  COMMAND_MATRIX.md  DATA_SOURCES.md  DEFENSE_DEMO_RUNBOOK.md  DOMAIN_GLOSSARY.md  DWH_PHASE3C_FINAL.md  FIGURE_GALLERY.md  FINAL_PAPER_ALIGNMENT.md  FINAL_SUBMISSION_ALIGNMENT_CONTRACT.md  LAUNCHER_USER_GUIDE.md  METHODOLOGY_AMENDMENT_2016_MINDORO.md  MINDORO_PHASE1_PROVENANCE_FINAL.md  MINDORO_PRIMARY_VALIDATION_MIGRATION.md  MINDORO_TRACK_SEMANTICS_FINAL.md  MINDORO_VALIDATION_ARCHIVE_DECISION.md  OUTPUT_CATALOG.md  PANEL_REVIEW_GUIDE.md  PAPER_OUTPUT_REGISTRY.md  PAPER_TO_REPO_CROSSWALK.md  PHASE1_REGIONAL_2016_2022_REFERENCE_NOTE.md  PHASE_STATUS.md  QUICKSTART.md  REPO_FINAL_ALIGNMENT_AUDIT.md  REPRODUCIBILITY_BUNDLE_GUIDE.md  THESIS_SURFACE_GOVERNANCE.md  UI_BRANDING.md  UI_GUIDE.md
logs/: April92154.txt
scripts/: __init__.py  build_b1_drifter_context_panel.py  check_data_source_registry.py  check_docs_against_manuscript_claims.py  defense_readiness_check.py  defense_readiness_common.py  run_defense_demo_smoke.ps1  validate_archive_registry.py  validate_data_sources_registry.py  validate_final_paper_guardrails.py
src/: __init__.py  __main__.py
tests/: inspect_nc.py  launcher_ps_helpers.py  run_tests.ps1  test_artifact_status.py  test_benchmark_metrics.py  test_convergence_after_shoreline.py  test_defense_artifact_registry.py  test_defense_claim_boundaries.py  test_defense_dashboard_imports.py  (+48 more)
(+297 files in other folders)
