[tool.poetry]
name = "oil-spill-phase3"
version = "0.1.0"
description = "Phase 3: Oil Spill Modeling with PyGNOME"
authors = ["Arjay Saguisa <arjayninosaguisa@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/kkreiju/drifter-validated-oilspill-forecasting"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core Science (Bleeding Edge for NOAA Tools)
numpy = ">=1.26.0,<2.0.0"
scipy = "^1.11.0"
pandas = "^2.2.0"
xarray = "^2024.5.0"
matplotlib = "^3.8.0"
opendrift = "^1.11.0"
psutil = "7.2.2"
rasterio = "^1.3.0"
rioxarray = "^0.15.0"

# NOAA Transitive Deps
colander = "<2.0.0"
gsw = "^3.6.0"
cftime = "^1.6.0"
shapely = "^2.0.0"
python-dateutil = "*"
pyyaml = "^6.0"
loguru = "^0.7.0"
trimesh = "^4.0.0"
Rtree = "^1.0.0"

# Data Ingestion
erddapy = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"