[tool.poetry]
name = "oil-spill-phase1"
version = "0.1.0"
description = "Phase 1: Ingestion and Transport Validation"
authors = ["Arjay Saguisa <arjayninosaguisa@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/kkreiju/drifter-validated-oilspill-forecasting"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core Science (Stable for OpenDrift / Ingestion)
numpy = "^1.26.0" 
scipy = "^1.10.0"
pandas = "^2.2.0"
xarray = "^2024.5.0"

# Modeling & Vis
opendrift = "^1.11.0"
psutil = "7.2.2"
cartopy = "^0.23.0"
matplotlib = "^3.9.0"
netCDF4 = "1.6.5"
h5py = "3.10.0"   
rasterio = "^1.3.0"
rioxarray = "^0.15.0"

# Data Ingestion
erddapy = "2.3.0"
copernicusmarine = "2.3.0"
cdsapi = "^0.7.0"
cfgrib = "^0.9.15.1"
eccodes = "^2.46.0"
# Poetry is not reliably pulling eccodes' Linux binary runtime transitively in
# this image, so keep the matching ecCodes wheel explicit.
eccodeslib = ">=2.46.0.12,<2.47"

# Utilities
pyyaml = "^6.0"
loguru = "^0.7.0"
streamlit = "^1.44.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
